--- a/CashRegister.UnitTests/CashRegister.UnitTests.csproj
+++ b/CashRegister.UnitTests/CashRegister.UnitTests.csproj
@@ -18,4 +18,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CashRegister.Server\CashRegister.Server.csproj" />
+  </ItemGroup>
+
 </Project>
