made currency and probabilities configurable, added api controller

--- a/CashRegister.Server/appsettings.json
+++ b/CashRegister.Server/appsettings.json
@@ -5,5 +5,21 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CashRegister": {
+    "CurrencyDenominations": {
+      "dollar": 1.00,
+      "quarter": 0.25,
+      "dime": 0.10,
+      "nickel": 0.05,
+      "penny": 0.01
+    },
+    "CurrencySymbol": "$",
+    "RandomProbabilities": {
+      "SkipDenominationProbability": 0.3,
+      "UsePartialAmountProbability": 0.4,
+      "UseFullAmountProbability": 0.3,
+      "MaxCoinsPerDenomination": 10
+    }
+  }
 }
