--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,13 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
+    - name: Cache NuGet packages
+      uses: actions/cache@v4
+      with:
+        path: ~/.nuget/packages
+        key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
+        restore-keys: |
+          ${{ runner.os }}-nuget-
     - name: Restore dependencies
       run: dotnet restore CashRegister.sln
     - name: Build
@@ -36,6 +43,9 @@ jobs:
       working-directory: cashregister.client
     - name: Lint
       run: npm run lint
+      working-directory: cashregister.client
+    - name: Test
+      run: npm run test
       working-directory: cashregister.client
     - name: Build
       run: npm run build
