--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     networks:
       - cashregister-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/weatherforecast"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/cashregister/health"]
       interval: 30s
       timeout: 10s
       retries: 3
