made divisor configurable like other values

--- a/CashRegister.Server/appsettings.json
+++ b/CashRegister.Server/appsettings.json
@@ -45,6 +45,7 @@
       "penny": 0.01
     },
     "CurrencySymbol": "$",
+    "RandomDivisor": 3,
     "RandomProbabilities": {
       "SkipDenominationProbability": 0.3,
       "UsePartialAmountProbability": 0.4,
